--- a/MS-Email/src/main/resources/application.properties
+++ b/MS-Email/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.rabbitmq.addresses=amqps://galxftuv:*******@hawk.rmq.cloudamqp.com/galxftuv
+spring.rabbitmq.addresses=amqps://****:*******@hawk.rmq.cloudamqp.com/****
 
 broker.queue.email.name=default.email
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=seuEmail@gmail.com
-spring.mail.password=suaSenhaParaApp
+spring.mail.password=**** **** **** ****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
