--- a/MS-User/src/main/resources/application.properties
+++ b/MS-User/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.rabbitmq.addresses=amqps://galxftuv:*********@hawk.rmq.cloudamqp.com/galxftuv
+spring.rabbitmq.addresses=amqps://****:*********@hawk.rmq.cloudamqp.com/****
 broker.queue.email.name=default.email
